--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to boards", boards_path %>
+  <%= link_to "Back to boards", user_boards_path(current_user) %>
 </div>
