--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: board) do |form| %>
+<%= form_with(model: [current_user, board]) do |form| %>
   <% if board.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(board.errors.count, "error") %> prohibited this board from being saved:</h2>
@@ -29,11 +29,6 @@
   <div>
     <%= form.label :keep_secret, style: "display: block" %>
     <%= form.check_box :keep_secret %>
-  </div>
-
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
   </div>
 
   <div>
