--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this board", @board %> |
-  <%= link_to "Back to boards", boards_path %>
+  <%= link_to "Show this board", user_board_path(current_user, @board) %> |
+  <%= link_to "Back to boards", user_boards_path(current_user) %>
 </div>
