--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <nav>      
       <% if user_signed_in? %>
-        <%= button_to "Log out ", destroy_user_session_path, method: :delete %></p>
+        <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete} %></p>
       <% else %>
         <p><%= link_to "Sign in", new_user_session_path %></p>
       <% end %>
