--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <nav>      
       <% if user_signed_in? %>
-        <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete} %></p>
+        <%= link_to "Home ", root_path %>
+        <%= link_to "Create ", new_pin_path %>
+        <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete} %>
       <% else %>
         <p><%= link_to "Sign in", new_user_session_path %></p>
       <% end %>
