Add view of all pins created by user

--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id pin %>">
   <p>
     <strong>Image:</strong>
-    <%= link_to image_tag(pin.resize_img(pin.image, 750)), pin.image if pin.image.attached? %>
+    <%= link_to image_tag(pin.resize_img(pin.image, 508, 760)), pin.image if pin.image.attached? %>
   </p>
 
   <p>
