--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id board %>">
   <p>
     <strong>Cover:</strong>
-    <%= link_to image_tag(board.resize_img(board.cover, 300)), board.cover if board.cover.attached? do %>
+    <%= link_to image_tag(board.resize_img(board.cover, 300, 300)), board.cover if board.cover.attached? do %>
       <%= %>
     <% end %>
   </p>
