--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <% if user_signed_in? %>
         <%= link_to "Home ", root_path %>
         <%= link_to "Create ", new_pin_path %>
+        <%= link_to "Profile ", user_path(current_user) %>
         <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete} %>
       <% else %>
         <p><%= link_to "Sign in", new_user_session_path %></p>
