--- a/app/views/pins/_select_tag.html.erb
+++ b/app/views/pins/_select_tag.html.erb
@@ -1,4 +1,4 @@
-<select name="pin[board_id]" id="pin_board_id">
+<select name="board_id" id="board_id">
   <% if not new_board_id %>
     <option value="" disabled selected>Choose a board</option>
   <% else %>
