Fix double notice ...on other view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
     </nav>
     <div>
       <div>
+        <p style="color: green"><%= notice %></p>
+        <p style="color: red"><%= alert %></p>
         <%= yield %>
       </div>
     </div>
