Edit the view of board: show and index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,21 @@
   padding: 0;
   box-sizing: border-box;
 }
+a {
+  color: black;
+}
+a:link {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+a:active {
+  text-decoration: underline;
+}
 .container {
   width: calc(236px * 7 + 20px * 6);
   margin: 20px auto;
@@ -90,4 +105,7 @@
   width: 157px;
   margin-bottom: 10px;
   break-inside: avoid;
+}
+.board-thumbnail {
+  border-radius: 15px;
 }
