--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,8 +1,8 @@
-<%= render @board %>
-
 <div>
   <%= link_to "Edit this board", edit_user_board_path(current_user, @board) %> |
-  <%= link_to "Back to boards", user_boards_path(current_user) %>
-
+  <%= link_to "Board & Saved Pins", user__saved_index_path(current_user) %>
   <%= button_to "Destroy this board", user_board_path(current_user, @board), method: :delete %>
 </div>
+<%= render @board %>
+
+<%= render partial: "shared/show_saved_pins", locals: {saved_pins: @saved_pins} %>
