--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,1 +1,11 @@
-<%= render partial: "users/pin", locals: {pins: @pins} %>
+<%= turbo_frame_tag "content" do %>
+  <div class="container">
+    <% cache @pins do %>
+      <% @pins.each do |pin| %>
+        <% cache pin do %>
+          <%= render partial: "shared/pin", locals: {pin: pin } %>
+        <% end %>
+      <% end %>
+    <% end %>
+  </div>
+<% end %>
