--- a/app/views/shared/_profile.html.erb
+++ b/app/views/shared/_profile.html.erb
@@ -4,6 +4,6 @@
   <div>Edit Profile</div>
 </div>
 <div class="middle-nav">
-  <div><%= link_to "Created", user__created_index_path(@user), data: {turbo_frame: "content"}  %></div>
-  <div><%= link_to "Saved", user__saved_index_path(@user), data: {turbo_frame: "content"}  %></div>
+  <div><%= link_to "Created", user__created_index_path(@user)  %></div>
+  <div><%= link_to "Saved", user__saved_index_path(@user)  %></div>
 </div>
