--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,25 +1,12 @@
 <div id="<%= dom_id board %>">
   <p>
-    <strong>Cover:</strong>
     <%= link_to image_tag(board.resize_img(board.cover, 300, 300)), board.cover if board.cover.attached? do %>
       <%= %>
     <% end %>
   </p>
 
   <p>
-    <strong>Name:</strong>
-    <%= board.name %>
+    <div><strong><%= board.name %></strong></div>
+    <div><%= board.description %></div>
   </p>
-
-  <p>
-    <strong>Description:</strong>
-    <%= board.description %>
-  </p>
-
-  <p>
-    <strong>Keep secret:</strong>
-    <%= board.keep_secret %>
-  </p>
-
-
 </div>
