--- a/app/views/boards/create.turbo_stream.erb
+++ b/app/views/boards/create.turbo_stream.erb
@@ -6,3 +6,6 @@
   <%= turbo_frame_tag "new_board" %>
 <% end %>
 
+<%= turbo_stream.replace "all-boards" do %>
+  <%= render partial: "shared/all_boards", locals: {boards: @boards, user: @user} %>
+<% end %>
