--- a/app/views/created/index.html.erb
+++ b/app/views/created/index.html.erb
@@ -5,7 +5,7 @@
     <% cache @pins do %>
       <% @pins.each do |pin| %>
         <% cache pin do %>
-          <%= render partial: "shared/pin", locals: {pin: pin } %>
+          <%= render partial: "shared/pin", locals: {pin: pin, edit_pin: true } %>
         <% end %>
       <% end %>
     <% end %>
