--- a/app/views/saved_pins/_edit_saved_pin.html.erb
+++ b/app/views/saved_pins/_edit_saved_pin.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [pin, saved_pin]) do |form| %>
+<%= form_with(model: [pin, saved_pin], method: :patch) do |form| %>
   <% if saved_pin.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(saved_pin.errors.count, "error") %> prohibited this saved_pin from being saved:</h2>
@@ -14,6 +14,7 @@
   <%= render partial: "shared/select_a_board", locals: {pin: pin} %>
 
   <div>
-    <%= form.submit "Save on Board" %>
+    <%= form.submit "Save" %>
   </div>
 <% end %>
+
