--- a/app/views/saved_pins/edit.html.erb
+++ b/app/views/saved_pins/edit.html.erb
@@ -1,10 +1,6 @@
-<h1>Editing saved pin</h1>
+<h1>Edit Saved Pin</h1>
 
-<%= render "form", saved_pin: @saved_pin %>
+<%= turbo_frame_tag("edit#{dom_id(@saved_pin)}") do %>
+  <%= render partial: "saved_pins/edit_saved_pin", locals: {pin: @pin, saved_pin: @saved_pin} %>
+<% end %>
 
-<br>
-
-<div>
-  <%= link_to "Show this saved pin", @saved_pin %> |
-  <%= link_to "Back to saved pins", saved_pins_path %>
-</div>
