--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New board</h1>
 
-<%= render "form", board: @board %>
+<%= render partial: "boards/form", locals: {board: @board, pin_id: defined?(@pin_id) ? @pin_id : nil} %>
 
 <br>
 
