--- a/app/views/shared/_pin.html.erb
+++ b/app/views/shared/_pin.html.erb
@@ -1,10 +1,22 @@
 <% if pin.image.attached? %>
-  <div class="box">
-    <%= link_to image_tag(pin.resize_img(pin.image, 236, 760)), pin , data: { turbo_frame: "_top" } %>
+  <%= turbo_frame_tag("box_#{dom_id(pin)}") do %>
+    <div class="box">
+      <%= link_to image_tag(pin.resize_img(pin.image, 236, 760)), pin , data: { turbo_frame: "_top" } %>
 
-    <%= turbo_frame_tag(dom_id(pin)) do %>
-      <%= render partial: "shared/seved_pin_form_layout", locals: {pin: pin} %>
-    <% end %>
-  </div>
+      <%= turbo_frame_tag(dom_id(pin)) do %>
+
+        <%= render partial: "shared/saved_pin_form_layout", locals: {pin: pin} %>
+
+        <% if defined?(saved_pin) %>
+          <%= render partial: "shared/edit_saved_pin_layout", locals: {pin: pin, saved_pin: saved_pin} %>
+        <% end %>
+
+        <% if defined?(edit_pin) %>
+          <%= render partial: "shared/edit_pin_layout", locals: {pin: pin} %>
+        <% end %>
+
+      <% end %>
+    </div>
+  <% end %>
 <% end %>
   
