--- a/app/views/shared/_select_a_board.html.erb
+++ b/app/views/shared/_select_a_board.html.erb
@@ -1,8 +1,9 @@
 <div>
   <label for="board_id" style="display: block;">Board</label>
-  <%= render partial: "pins/select_tag", locals: { options: current_user.boards.pluck(:name, :id), new_board_id: nil, new_board_name: nil } %>
+  <% open_boards, closed_boards = filter_options(pin, current_user, current_user.boards) %>
+  <%= render partial: "pins/select_tag", locals: { open_boards: open_boards, closed_boards: closed_boards, new_board_id: nil, new_board_name: nil } %>
 
-  <div><%= link_to "Or Create New Board", new_user_board_path(current_user), data: { turbo_frame: "new_board" } %></div>
+  <div><%= link_to "Or Create New Board", new_user_board_path(current_user, pin_id: pin.id), data: { turbo_frame: "new_board" } %></div>
 
   <div id="new_board_form"><%= turbo_frame_tag "new_board" %></div>
 </div>
