--- a/app/views/shared/_show_saved_pins.html.erb
+++ b/app/views/shared/_show_saved_pins.html.erb
@@ -2,7 +2,7 @@
   <% cache saved_pins do %>
     <% saved_pins.each do |saved_pin| %>
       <% cache saved_pin do %>
-        <%= render partial: "shared/pin", locals: {pin: saved_pin.pin } %>
+        <%= render partial: "shared/pin", locals: {pin: saved_pin.pin, saved_pin: saved_pin } %>
       <% end %>
     <% end %>
   <% end %>
