Allow unsave the pin

--- a/app/views/saved_pins/_edit_saved_pin.html.erb
+++ b/app/views/saved_pins/_edit_saved_pin.html.erb
@@ -17,4 +17,5 @@
     <%= form.submit "Save" %>
   </div>
 <% end %>
+<%= button_to "Delete", pin_saved_pin_path(pin, saved_pin), method: :delete %>
 
