--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Editing pin</h1>
 
-<%= render "edit_form", pin: @pin %>
+<%= turbo_frame_tag [dom_id(pin), "_edit_layout"] do %>
+  <%= render "edit_form", pin: @pin %>
+<% end %>
 
 <br>
 
