--- a/app/views/shared/_saved_pin_form_layout.html.erb
+++ b/app/views/shared/_saved_pin_form_layout.html.erb
@@ -1,5 +1,14 @@
-<%= form_with model: [pin, pin.saved_pins.build] do |f| %>
-  <%= f.submit "Save" %>
-<% end %>
-<%= link_to "Choose board" ,new_pin_saved_pin_path(pin), data: { turbo_frame: "#{dom_id(pin)}_new_saved_pin" } %>
-<%= turbo_frame_tag("#{dom_id(pin)}_new_saved_pin") %>
+<div id="<%= dom_id(pin) %>_save_pin_form_mini">
+  <% save_pin_profile = check_saved_to_profile(pin, current_user) %>
+  <% if save_pin_profile.nil? %>
+    <%= form_with model: [pin, pin.saved_pins.build] do |f| %>
+      <%= f.submit "Save to Profile" %>
+    <% end %>
+  <% end %>
+  <% if save_pin_profile %>
+    <%= button_to "Unsave from Profile", pin_saved_pin_path(pin, save_pin_profile), method: :delete %>
+  <% end %>
+  
+  <%= link_to "Save to another Board" ,new_pin_saved_pin_path(pin), data: { turbo_frame: "#{dom_id(pin)}_new_saved_pin" } %>
+  <%= turbo_frame_tag("#{dom_id(pin)}_new_saved_pin") %>
+</div>
