--- a/app/views/shared/_edit_pin_layout.html.erb
+++ b/app/views/shared/_edit_pin_layout.html.erb
@@ -1,2 +1,2 @@
-<%= link_to "Edit this pin", edit_pin_path(pin) %>
-<%= turbo_frame_tag [dom_id(pin), "_edit_layout"] %>
+<%= link_to "Edit this pin", edit_pin_path(pin), data: {turbo_frame: "#{dom_id(pin)}_edit_layout"} %>
+<%= turbo_frame_tag [dom_id(pin), "edit_layout"] %>
