Allow add comments and reply to comment with turbo

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag("#{dom_id(@comment)}_show_replies") do %>
   <% @comment.replies.each do |reply| %>
-    <%= render partial: "shared/comment_short", locals: {comment: reply} %>
+    <%= render partial: "shared/comment_short", locals: {pin: @pin, comment: reply} %>
   <% end %>
 <% end %>
