--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [pin, comment]) do |form| %>
+<%= form_with(model: [pin, comment] ) do |form| %>
   <% if comment.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -12,13 +12,13 @@
   <% end %>
   
   <div>
-    <% place_holder = comment.parent_id ? "Reply" : "Add a comment" %>
-    <%= form.text_area :body, place_holder: place_holder %>
+    <% placeholder = comment.parent_id ? "Reply" : "Add a comment" %>
+    <%= form.text_area :body, placeholder: placeholder %>
   </div>
 
-  <div>
-    <%= form.hidden_field :parent_id, comment.parent_id %>
-  </div>
+    <div>
+      <%= form.hidden_field :parent_id, value: comment.parent_id %>
+    </div>
 
   <div>
     <%= form.submit "Save" %>
