--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Editing comment</h1>
 
 <%= turbo_frame_tag("#{dom_id(@comment)}_body") do %>
-  <%= form_with(model: [pin, @comment]) do |form| %>
+  <%= form_with(model: [@pin, @comment]) do |form| %>
     <% if @comment.errors.any? %>
       <div style="color: red">
         <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
