--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New comment</h1>
 
-<%= turbo_frame_tag("#{dom_id(@comment)}_new_reply") do %>
-  <%= render "form", comment: @comment %>
+<%= turbo_frame_tag(@turbo_frame_id) do %>
+  <%= render "form", pin: @pin, comment: @comment %>
 <% end %>
 
 <br>
