--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing board</h1>
-
-<%= render "form", board: @board %>
-
-<br>
-
-<div>
-  <%= link_to "Show this board", user_board_path(current_user, @board) %> |
-  <%= link_to "Back to boards", user_boards_path(current_user) %>
+<div class="middle-container">
+  <div>
+    <h1>Editing board</h1>
+  
+    <%= render "form", board: @board %>
+  
+    <br>
+  
+    <div>
+      <%= link_to "Show this board", user_board_path(current_user, @board) %> |
+      <%= link_to "Back to boards", user_boards_path(current_user) %>
+    </div>
+  </div>
 </div>
