--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -6,7 +6,7 @@
   </p>
 
   <p>
-    <div><strong><%= board.name %></strong></div>
-    <div><%= board.description %></div>
+    <div><strong>Name: <%= board.name %></strong></div>
+    <div><strong>Description:</strong> <%= board.description %></div>
   </p>
 </div>
