--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New board</h1>
-
-<%= render partial: "boards/form", locals: {board: @board, pin_id: defined?(@pin_id) ? @pin_id : nil} %>
-
-<br>
-
-<div>
-  <%= link_to "Back to boards", user_boards_path(current_user) %>
+<div class="middle-container">
+  <div>
+    <h1>New board</h1>
+  
+    <%= render partial: "boards/form", locals: {board: @board, pin_id: defined?(@pin_id) ? @pin_id : nil} %>
+  
+    <br>
+  
+    <div>
+      <%= link_to "Back to boards", user_boards_path(current_user) %>
+    </div>
+  </div>
 </div>
