--- a/app/views/created/index.html.erb
+++ b/app/views/created/index.html.erb
@@ -1,5 +1,6 @@
 <%= render partial: "shared/profile", locals: { user: @user } %>
-
+<hr>
+<div class="md big m1">All Pins Created</div>
 <%= turbo_frame_tag "content" do %>
   <div class="container">
     <% cache @pins do %>
