--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,19 +13,18 @@
   <body>
     <nav>      
       <% if user_signed_in? %>
-        <%= link_to "Home ", root_path %>
-        <%= link_to "Create Pin ", new_pin_path %>
-        <%= link_to "Create Board ", new_user_board_path(current_user) %>
-        <%= link_to "Profile ", user_path(current_user) %>
-        <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete} %>
+        <%= link_to "Home ", root_path, class: "home md big" %>
+        <%= link_to "Create Pin ", new_pin_path, class: "md big" %>
+        <%= link_to "Create Board ", new_user_board_path(current_user), class: "md big" %>
+        <%= link_to "Profile ", user_path(current_user), class: "md big" %>
+        <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete}, class: "md big right-side" %>
       <% else %>
-        <p><%= link_to "Sign in", new_user_session_path %></p>
+        <p><%= link_to "Sign in right-side", new_user_session_path, class: "md big" %></p>
       <% end %>
     </nav>
     <div>
       <div>
-        <p style="color: green"><%= notice %></p>
-        <p style="color: red"><%= alert %></p>
+        <%= render partial: "shared/flash" %>
         <%= yield %>
       </div>
     </div>
