--- a/app/views/pins/_edit_form.html.erb
+++ b/app/views/pins/_edit_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div>
-    <%= form.label :image, style: "display: block" %>
+    <%= form.label :image, "Upload Image", class: "custom-file-upload" %>
     <%= form.file_field :image %>
   </div>
 
