--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,43 +1,55 @@
-<div id="<%= dom_id pin %>">
-  <p>
-    <strong>Image:</strong>
-    <%= link_to image_tag(pin.resize_img(pin.image, 508, 760)), pin.image if pin.image.attached? %>
-  </p>
-
-  <p>
-    <strong>Title:</strong>
-    <%= pin.title %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
-    <%= pin.description %>
-  </p>
-
-  <p>
-    <strong>Link:</strong>
-    <%= pin.link %>
-  </p>
-   
-  <p>
-    <%= render partial: "pins/note", locals: {pin: pin, note: note} %>
-    <%= turbo_frame_tag "note" %>
-  </p>
-
-  <p>
-    <div class="comments-section">
-      <%= turbo_frame_tag("#{dom_id(pin)}_comments") do %>
-        <div id="add-comment"><%= render partial: "comments/form", locals: {pin: pin, comment: pin.comments.build} %></div>
-        <div>Comments</div>
-        <%= turbo_frame_tag("#{dom_id(pin)}_show_all_comments") do %>
-          <% if pin.comments.count == 0 %>
-            <div id="comment-empty">No comments yet! Add one to start the conversation.</div>
-          <% end %>
-          <% pin.comments.is_root.order(created_at: :desc).each do |comment| %>
-            <%= render partial: "shared/comment_short", locals: {pin: pin, comment: comment} %>
-          <% end %>
-        <% end %>
+<div class="middle-container">
+  <div id="<%= dom_id pin %>" class= "pin_display">
+    <p class = "pin_img">
+      <%= link_to image_tag(pin.resize_img(pin.image, 508, 760)), pin.image if pin.image.attached? %>
+    </p>
+    
+    <div class = "pin_content">
+      <% if pin.user == current_user %>
+        <div>
+          <%= link_to "Edit this pin", edit_pin_path(pin), class: "bold" %> 
+          <%= link_to "Destroy this pin", pin_path(pin), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "bold" %>
+        </div>
       <% end %>
+      <p  class="m1">
+        <strong>Title:</strong>
+        <strong><%= pin.title %></strong>
+      </p>
+      <p class="m1">
+        <strong>Description:</strong>
+        <%= pin.description %>
+      </p>
+      <% if pin.link.present? %>
+        <p class="m1">
+          <strong>Link:</strong>
+          <%= pin.link %>
+        </p>
+      <% end %>
+  
+      <p class="m1">
+        <%= render partial: "pins/note", locals: {pin: pin, note: note} %>
+        <%= turbo_frame_tag "note" %>
+      </p>
+      <p class="m1">
+        <div class="comments-section">
+          <%= turbo_frame_tag("#{dom_id(pin)}_comments") do %>
+            <div id="add-comment"><%= render partial: "comments/form", locals: {pin: pin, comment: pin.comments.build} %></div>
+            <div class="bold">Comments</div>
+            <%= turbo_frame_tag("#{dom_id(pin)}_show_all_comments") do %>
+              <% if pin.comments.count == 0 %>
+                <div id="comment-empty">No comments yet! Add one to start the conversation.</div>
+              <% end %>
+              <% pin.comments.is_root.order(created_at: :desc).each do |comment| %>
+                <%= render partial: "shared/comment_short", locals: {pin: pin, comment: comment} %>
+              <% end %>
+            <% end %>
+          <% end %>
+        </div>
+      </p>
     </div>
-  </p>
+  </div>
 </div>
+
+<div class="m2 md big">More to explore</div>
+
+<%= turbo_frame_tag "content", src: root_path %>
