--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,12 +1,16 @@
-<h1>Editing pin</h1>
-
-<%= turbo_frame_tag [dom_id(@pin), "edit_layout"] do %>
-  <%= render "edit_form", pin: @pin %>
-<% end %>
-
-<br>
-
-<div>
-  <%= link_to "Show this pin", @pin %> |
-  <%= link_to "Back to pins", pins_path %>
+<div class="middle-container">
+  <div>
+    <h1>Editing pin</h1>
+  
+    <%= turbo_frame_tag [dom_id(@pin), "edit_layout"] do %>
+      <%= render "edit_form", pin: @pin %>
+    <% end %>
+  
+    <br>
+  
+    <div>
+      <%= link_to "Show this pin", @pin %> |
+      <%= link_to "Back to pins", pins_path %>
+    </div>
+  </div>
 </div>
