--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,10 @@
         <%= link_to "Create Board ", new_user_board_path(current_user), class: "md big" %>
         <%= link_to "Profile ", user_path(current_user), class: "md big" %>
         <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete}, class: "md big right-side" %>
+
       <% else %>
-        <p><%= link_to "Sign in right-side", new_user_session_path, class: "md big" %></p>
+        <p><%= link_to "Sign in ", new_user_session_path, class: "md big" %></p>
+        <p><%= link_to "Sign up", new_user_registration_path, class: "md big" %></p>        
       <% end %>
     </nav>
     <div>
