--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
   </head>
 
   <body>
-    <nav>      
+    <nav data-controller="navigate" data-navigate-target="link" data-path=<%= request.fullpath %> >      
       <% if user_signed_in? %>
-        <%= link_to "Home ", root_path, class: "home md big" %>
-        <%= link_to "Create Pin ", new_pin_path, class: "md big" %>
-        <%= link_to "Create Board ", new_user_board_path(current_user), class: "md big" %>
-        <%= link_to "Profile ", user_path(current_user), class: "md big" %>
+        <%= link_to "Home ", root_path, class: "md big", "data-navigate-target": "navButton" %>
+        <%= link_to "Create Pin ", new_pin_path, class: "md big", "data-navigate-target": "navButton" %>
+        <%= link_to "Create Board ", new_user_board_path(current_user), class: "md big", "data-navigate-target": "navButton" %>
+        <%= link_to "Profile ", user_path(current_user), class: "md big", "data-navigate-target": "navButton" %>
         <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete}, class: "md big right-side" %>
 
       <% else %>
