--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -219,13 +219,17 @@ nav {
 }
 nav a {
   padding: 1.25rem;
+  border-radius: 1.5rem;
+  padding: 0.75rem;
+  margin: 0.5rem;
+}
+nav a:hover {
+  background-color: rgb(204, 204, 204);
+  color: var(--color30);
 }
 .home {
   color: white;
   background-color: var(--color30);
-  border-radius: 1.5rem;
-  padding: 0.75rem;
-  margin: 0.5rem;
 }
 .border-bottom {
   border-bottom: 2px solid white;
