Allow saving pin in pin:show view

--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -11,6 +11,20 @@
           <%= link_to "Destroy this pin", pin_path(pin), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "bold" %>
         </div>
       <% end %>
+      
+      <div class="save-frame">
+        <%= turbo_frame_tag("save_unsaved#{dom_id(pin)}") do %>
+          <% been_saved, saved_to = saved_to_board(pin, current_user) %>
+          <%# saved_to_board is a helper method %>   
+          <% if been_saved == false %>
+            <%= render partial: "shared/saved_pin_form_layout", locals: {pin: pin} %>
+          <% end %>
+          <% if been_saved == true %>
+            <%= render partial: "shared/unsave_layout", locals: {pin: pin, board_id: saved_to} %>
+          <% end %>
+        <% end %>
+      </div>
+
       <p  class="m1">
         <strong>Title:</strong>
         <strong><%= pin.title %></strong>
