--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,9 @@ a {
   text-decoration: none;
   color: black;
 }
+a:hover {
+  text-decoration: underline;
+}
 .container {
   width: calc(236px * 7 + 20px * 6);
   margin: 20px auto;
@@ -226,6 +229,7 @@ nav a {
 nav a:hover {
   background-color: rgb(204, 204, 204);
   color: var(--color30);
+  text-decoration: none;
 }
 .home {
   color: white;
