Fix js when button_id return null

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -147,7 +147,7 @@ a:hover {
 }
 .pin_img a {
   display: flex;
-  justify-content: end;
+  justify-content: center;
   margin-right: 0;
 }
 .pin_img img {
