--- a/app/views/created/index.html.erb
+++ b/app/views/created/index.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </div>
 
-  <% if @user.pins.count == 0 %>
+  <% if @user == current_user && @user.pins.count == 0 %>
     <div class="m1 md">
       <div>You haven't created any pin yet.</div>
       <div><%= link_to "Create One", new_pin_path, data: {turbo_frame: "_top"} %></div>
