--- a/app/views/follows/_following.html.erb
+++ b/app/views/follows/_following.html.erb
@@ -1,3 +1,4 @@
+<% user = pin.user if defined?(pin) %>
 <%= turbo_frame_tag("follow_frame") do %>
-  <%= button_to "Follow", follows_path(followee_id: pin.user.id), class: "not-follow" %>
+  <%= button_to "Follow", follows_path(followee_id: user.id), class: "not-follow" %>
 <% end %>
