--- a/app/views/saved/index.html.erb
+++ b/app/views/saved/index.html.erb
@@ -4,7 +4,7 @@
   <hr>
   <div class="m1 md big">All boards</div>
 
-  <% if @user.boards.count == 0 %>
+  <% if @user == current_user && @user.boards.count == 0 %>
     <div class="m1 md">
       <div>You haven't created any board yet.</div>
       <div><%= link_to "Create One", new_user_board_path(@user), data: {turbo_frame: "_top"} %></div>
@@ -18,7 +18,7 @@
   <div class="md big m1">Unorganized Ideas</div>
   <%= render partial: "shared/show_saved_pins", locals: {saved_pins: @unorganized_saved_pins} %>
 
-  <% if @user.saved_pins.count == 0 %>
+  <% if @user == current_user && @user.saved_pins.count == 0 %>
     <div class="m1 md">
       <div>You haven't saved any pin yet.</div>
       <div><%= link_to "Browse for Ideas", root_path, data: {turbo_frame: "_top"} %></div>
