--- a/app/views/shared/_profile.html.erb
+++ b/app/views/shared/_profile.html.erb
@@ -1,9 +1,20 @@
 <div class="middle-container">
   <div>
     <div class="information">
-      <div><%= user.email %></div>
-      <div><%= pluralize(current_user.followers.count, "follower") %></div>
+      <%= render partial: "users/creator_info", locals: {user: user} %>
+      <div class="follow-button">
+        <% if current_user != user %>
+          <% followed = current_user.followings.find_by(id: user.id) %>
+          <% if followed %>
+            <%= render partial: "follows/follow", locals: {user: user} %>
+          <% end %>
+          <% if not followed %>
+            <%= render partial: "follows/following", locals: {user: user} %>
+          <% end %>
+        <% end %>
+      </div>
     </div>
+    
     <div class="middle-nav">
       <div class="middle-one-line-container">
         <div class="m1 big border-bottom"><%= link_to "Created", user__created_index_path(@user), "data-navigate-target": "navButton"  %></div>
